--- a/TrainingWebbApp/Pages/Index.cshtml
+++ b/TrainingWebbApp/Pages/Index.cshtml
@@ -4,22 +4,30 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Workout App</h1>
+<div class="text-center" style="height:250px">
+    <h1 class="display-4">MoveLog</h1>
 </div>
 
-<!--<div class="text-center">
-    <h5> My progress</h5>
+<div class="text-center" style="height:90px">
+    <h5> Progress In Running: </h5>
 </div>
 
 <div class="progress" style="height:20px">
-  <div class="progress-bar" style="width:40%;height:20px">40%</div>
+  <div class="progress-bar" style="width:60%;height:20px">5000/8000 m</div>
 </div>
 
-<div class="text-center">
-    <h5> Team progress</h5>
+<div class="text-center" style="height:90px">
+    <h5> Progress In Biking: </h5>
+</div>
+
+<div class="progress" style="height:20px">
+  <div class="progress-bar" style="width:30%;height:20px">3000/12000 m</div>
+</div>
+
+<div class="text-center" style="height:90px">
+    <h5> My Team Progress: </h5>
 </div>
 
 <div class="progress" style="height:20px">
   <div class="progress-bar" style="width:70%;height:20px">70%</div>
-</div> -->
+</div> 
