--- a/TrainingWebbApp/Pages/User.cshtml
+++ b/TrainingWebbApp/Pages/User.cshtml
@@ -8,44 +8,11 @@
   <li>User</li>
 </ul>
 
-<!--<form action="UserProfile">
-  <h3>Register to save your progress</h3>
-  <div class="input-container">
-    <i class="fa fa-user icon"></i>
-    <input class="input-field" type="text" placeholder="Username" name="username">
-  </div>
-
-  <div class="input-container">
-    <i class="fa fa-envelope icon"></i>
-    <input class="input-field" type="text" placeholder="Email" name="email">
-  </div>
-
-  <div class="input-container">
-    <i class="fa fa-key icon"></i>
-    <input class="input-field" type="password" placeholder="Password" name="password">
-  </div>
-    <button type="submit" class="btn">Register</button>
-</form>
-
-
--->
-
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Animated Login Form</title>
-        <link rel="stylesheet" href="site.css">
-    </head>
-    <body class="test2">
-<form class="box" action="UserProfile">
+<form class="box" asp-page="/UserProfile">
     <h1>Create your account</h1>
     <input type="text" name="" placeholder="Username">
     <input type="text" name="" placeholder="Email">
     <input type="password" name="" placeholder="Password">
     <input type="submit" name="" value="Sign-up">
     <a href="Login">If you already have an account - Press to Login </a>
-
 </form>
-
-    </body>
-</html>
