--- a/TrainingWebbApp/Pages/UserProfile.cshtml
+++ b/TrainingWebbApp/Pages/UserProfile.cshtml
@@ -15,8 +15,8 @@
 </div>
 
 <div class="text-center" style="float:left;">
-    <h5> Name: &nbsp; Ellen </h5>
-    <h5> Username: &nbsp; ellen26 </h5>
+    <h5> Name: &nbsp; Ellen Sdogos </h5>
+    <h5> Username: &nbsp; ellensdogos </h5>
     <h5> Email: &nbsp; ellen.sdogos@hotmail.com </h5>
 </div>
 
