--- a/TrainingWebbApp/Pages/Workout.cshtml
+++ b/TrainingWebbApp/Pages/Workout.cshtml
@@ -3,8 +3,6 @@
 @{
 }
 
-<!--<button class="btn"><i class="fa fa-bars"></i> &nbsp; Workouts</button> -->
-
 <ul class="breadcrumb">
   <li><a href="/">Home</a></li>
   <li>Workouts</li>
@@ -14,9 +12,8 @@
   <button class="btn-a" type="button" data-toggle="dropdown">
   <span class="fa fa-bars"></span> &nbsp; Register Workouts</button>
   <ul class="dropdown-menu">
-    <li><a href="#">Running</a></li>
+    <li><a href="/Running">Running</a></li>
     <li><a href="#">Biking </a></li>
-    <li><a href="#">Swimming</a></li>
     <li><a href="#">Walking</a></li>
   </ul>
 </div>
